--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   connectivity_plus: ^6.1.1
   firebase_core: ^3.10.0
   cloud_firestore: ^5.6.1
+  firebase_auth: ^5.4.1
 
 dev_dependencies:
   flutter_test:
