--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.10.0
   cloud_firestore: ^5.6.1
   firebase_auth: ^5.4.1
+  firebase_storage: ^12.4.2
 
 dev_dependencies:
   flutter_test:
