--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/foodDictionary.json
     - assets/ingredient_units.json
   #   - images/a_dot_ham.jpeg
