--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_auth: ^5.4.1
   firebase_storage: ^12.4.2
   flutter_launcher_icons: ^0.14.3
+  flutter_image_compress: ^2.4.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
