--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="cookcraft"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.gms.version"
+            android:value="@integer/google_play_services_version"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true"
