--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_image_compress: ^2.4.0
   path: ^1.9.0
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
